# audaces-perps

./: LICENSE  README.md
assets/: onChain.drawio  vAMM.drawio
cranker/: .gitignore  Cargo.toml
cranker/ansible/: ansible.cfg  env_files.yaml  setup.yaml  stop.yaml  update.yaml
cranker/pm2/: ecosystem.config.js  index.js  package.json
cranker/src/: error.rs  lib.rs  main.rs  utils.rs
js/: README.md  package.json
js/src/: bindings.ts  high_level.ts  index.ts  instructions.ts  markets.ts  oracle_utils.ts  secondary_bindings.ts  state.ts  types.ts  utils.ts
js/src/test_utils/: utils.ts
program/: .gitignore  Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  positions_book.rs  processor.rs  state.rs  utils.rs
program/src/positions_book/: memory.rs  page.rs  positions_book_tree.rs  tree_nodes.rs
program/src/processor/: add_budget.rs  add_instance.rs  add_page.rs  change_k.rs  close_account.rs  close_position.rs  close_withdraw.rs  create_market.rs  funding.rs  funding_extraction.rs  garbage_collection.rs  increase_position.rs  liquidation.rs  open_position.rs  rebalance.rs  transfer_position.rs  transfer_user_account.rs  update_oracle_account.rs  withdraw_budget.rs
program/src/state/: instance.rs  market.rs  user_account.rs
program/tests/: functional.rs  integration_tests.rs  pyth_test.rs  run_simulation.sh
program/tests/common/: context.rs  context_instructions.rs  mod.rs  utils.rs
program/tests/integration_tests_output/graph/: graph.py
utils/mock_oracle/: Cargo.toml
utils/mock_oracle/js/: main.ts  package.json
utils/mock_oracle/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs
