[package]
name = "perps-crank"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-bpf = []

[dependencies]
audaces-protocol = {path = "../program", features = ["no-entrypoint"]}
solana-program = "1.5.6"
solana-client = "1.6.9"
solana-sdk = "1.6.6"
spl-token = "3.1.0"
solana-clap-utils = "1.6.6"
solana-account-decoder = "1.7.8"
clap = "2.33.3"
thiserror = "1.0.24"
num_cpus = "1.13.0"
tokio = {version = "1.5.0", features = ["rt-multi-thread", "time"]}
bs58 = "0.4.0"
spl-associated-token-account = "1.0.2"
futures = "0.3.15"
pin-utils = "0.1.0"
async-mutex = "1.4.0"