[package]
name = "mock_oracle"
version = "0.1.0"
authors = ["Audaces Foundation <audacesfoundation@audaces.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.5.6"
num-traits = "0.2"
borsh = "0.8.1"
num-derive = "0.3.3"
thiserror = "1.0.24"

[lib]
crate-type = ["cdylib", "lib"]